[metadata]
name = example-package-test
version = 0.0.2
author = NikitaBes4
author_email = mandarin215@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NikitaBes4/py0
project_urls =
    Bug Tracker = https://github.com/NikitaBes4/py0/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src